hphp/test/zend/good/ext/libxml/tests/004.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded('dom')) die('skip');
}
