hphp/test/zend/bad/ext/libxml/tests/bug61367-write.php.skipif
<?php if(!extension_loaded('dom')) echo 'skip'; ?>